<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />

        <item
            android:id="@+id/explore"
            android:icon="@drawable/ic_baseline_explore_24"
            android:title="@string/explore" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite" />

    </group>

    <item android:title="@string/other">

        <menu>

            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />

            <item
                android:id="@+id/language"
                android:icon="@drawable/ic_baseline_language_24"
                android:title="@string/change_language" />

            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="@string/feedback" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about" />

        </menu>

    </item>

</menu>