<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/please_login_to_continue"
        android:textColor="@color/darkGreen" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_below="@id/txt"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dip"
        android:paddingEnd="26dip"
        android:textCursorDrawable="@drawable/cursor_color" />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@id/loginEmail"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dip"
        android:paddingEnd="26dip"
        android:textCursorDrawable="@drawable/cursor_color" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/forget_password" />

    <Button
        android:id="@+id/login"
        android:layout_width="@dimen/dp_250"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/button"
        android:elevation="@dimen/dp_8"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/phoneLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_toStartOf="@id/googleLogin"
        android:scaleType="center"
        app:backgroundTint="@color/colorWhite"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:fabSize="normal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/googleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_12"
        app:backgroundTint="@color/colorWhite"
        android:src="@drawable/google"
        app:fabSize="normal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/facebookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        app:backgroundTint="@color/colorWhite"
        android:layout_toEndOf="@id/googleLogin"
        android:src="@drawable/facebook"
        app:fabSize="normal" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@id/forgetPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:indeterminateDrawable="@drawable/progress_bg"
        android:max="100"
        android:progress="50"
        android:visibility="invisible" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_100"
        android:layout_height="2dp"
        android:layout_above="@id/quotes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/quotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_50"
        android:text="@string/quotes"
        android:textAlignment="center"
        android:textSize="@dimen/sp_12" />

</RelativeLayout>